# labo

./: .gitignore
src/Autoencoder/: Autoencoder_nuevasfeatures.ipynb  Autoenconder.ipynb  Autoenconder_experimento.ipynb  Untitled.ipynb  autoencoder_features.py
src/CazaTalentos/: Untitled-1.r  intento_A_02.r  zbasket_02.r  zintento_A_01.r  zintento_A_01_robusto.r  zintento_A_02.r  zintento_A_02_6_fases.r  zintento_A_02_grid.r  zintento_A_02_robusto.r  zintento_B.r
src/FeatureEngineering/: z711_FE_basico.r
src/KaggleHack/: z881_lightgbm_binaria_BO.r  z882_kaggle_hack.r
src/RepensandoOverfitting/: 520_canaritos_pruning.r  z510_rpart_alturas.r  z511_rpart_canaritos_prp.r  z512_canaritos_desconfiado.r  z520_canaritos_pruning.r
src/Shapley/: z1201_xgboost_aditivo.r  z1202_xgboost_SHAP.r
src/arbolesazarosos/: z621_arboles_azarosos.r
src/clustering/: analisis.ipynb  z1261_cluster_jerarquico.r  z1262_cluster_jerarquico_historia12.r
src/competencia3/: Untitled-1.ipynb  z1000_ZZ_semillerios.r  z1000_ZZ_semillerios_testeo.r  z1001_ZZ_ensamble_semillerios.r  z905_graficar_zero_rate.r  z906_reparar_dataset.r  z913_graficar_densidades_originales.r  z914_corregir_drifting.r  z925_FE_historia.r  z931_training_strategy.r  z941_HT_lightgbm.r  (+4 more)
src/monday/: 301_Optimización_bayesiana.R  301_Sobre_Cocinar_Pizzas  pyproject.toml  z1001_SHAP.ipynb  z201_Sobre_el_Orden.R  z202_Sobre_el_Azar.R  z301_Sobre_Cocinar_Pizzas.R  z401_Sobre_Campos.R  z501_Sobre_las_Clases.R  z601_Sobre_el_Oro.R  z602_Sobre_Ensambles.R  z701_Sobre_el_Futuro.R  z702_Sobre_LGBM.R  z801_Sobre_mas_features.R
(+57 files in other folders)
